[FIX] font color of disabled inputs to make it more readable

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -46,3 +46,7 @@
 .navbar-brand {
     font-weight: lighter;
 }
+
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control, input[type=text][disabled], input[type=text][readonly], fieldset[disabled] input[type=text] {
+    color: #29332f;
+}
